[package]
name = "link_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
tokio = { version = "1.16.1", features = ["full"] }
reqwest = { version = "0.11.5", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.130"
serde_json = "1.0.68"
futures = "0.3"
url = "2.2.2"